fix dialog z-index

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -341,6 +341,10 @@ input[class="form-underline"]:focus
     float:right;
     margin-left:20px;
 }
+.modal-dialog
+{
+    z-index: 9999;
+}
 /*
  * 强制更正css
  *
